--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.freemarker.content-type=text/html
 spring.freemarker.expose-request-attributes=false
 spring.freemarker.expose-session-attributes=false
 spring.freemarker.expose-spring-macro-helpers=false
+auto_import=ftl/lib.ftl as com
 #spring.freemarker.prefix=
 #spring.freemarker.request-context-attribute=
 #spring.freemarker.settings.*=
