--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,9 @@ spring.freemarker.expose-session-attributes=false
 spring.freemarker.expose-spring-macro-helpers=false
 auto_import=ftl/lib.ftl as com
 #spring.freemarker.prefix=
-#spring.freemarker.request-context-attribute=
+spring.freemarker.request-context-attribute=request
 #spring.freemarker.settings.*=
+spring.freemarker.settings.number_format=0
 spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates/
 #comma-separated list
