--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <!--<properties>-->
+    <!--可以覆盖parent maven的相同属性-->
+    <!--<selenium.version>3.14.0</selenium.version>-->
+    <!--</properties>-->
+
     <!-- 远程maven插件地址-->
     <pluginRepositories>
         <pluginRepository>
@@ -234,15 +239,6 @@
         </extensions>
 
         <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
