1、修复“记住我”功能 2、注入application.properties中自定义的配置(my.开头)到MyApplicationProperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,6 @@ spring.datasource.druid.stat-view-servlet.login-username=123
 spring.datasource.druid.stat-view-servlet.login-password=123
 #spring.datasource.druid.stat-view-servlet.allow=
 #spring.datasource.druid.stat-view-servlet.deny=
+#自定义配置
+#验证码超时时间，单位秒
+my.captchaOverTime=300
