1、根据角色id来匹配 2、把角色对象放入MyUserDetails类

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ refreshMapper=${refreshMapper}
 ########################################################
 ###FREEMARKER (FreeMarkerAutoConfiguration)
 ########################################################
+#设置是否允许HttpSession属性覆盖
+spring.freemarker.allow-session-override=true
 spring.freemarker.allow-request-override=false
 spring.freemarker.cache=true
 spring.freemarker.check-template-location=true
