1、druid账号密码不在程序里明文显示

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,8 +42,8 @@ logging.level.com.weichi.erp=${log4j.level}
 spring.datasource.druid.stat-view-servlet.enabled=true
 #spring.datasource.druid.stat-view-servlet.url-pattern=
 #spring.datasource.druid.stat-view-servlet.reset-enable=
-spring.datasource.druid.stat-view-servlet.login-username=123
-spring.datasource.druid.stat-view-servlet.login-password=123
+spring.datasource.druid.stat-view-servlet.login-username=${jdbc.username}
+spring.datasource.druid.stat-view-servlet.login-password=${jdbc.password}
 #spring.datasource.druid.stat-view-servlet.allow=
 #spring.datasource.druid.stat-view-servlet.deny=
 #自定义配置
