实现了同步、异步(采用了线程池，实现类 AsyncTaskConfig)邮件发送功能，实现类 MailUtils

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,10 @@ spring.datasource.druid.stat-view-servlet.login-password=${jdbc.password}
 #自定义配置
 #验证码超时时间，单位秒
 my.captchaOverTime=300
+#email配置
+spring.mail.host=smtp.exmail.qq.com
+spring.mail.port=465
+spring.mail.properties.smtp.auth=true
+spring.mail.properties.smtp.starttls.enable=true
+spring.mail.properties.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
