--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,10 @@
             <artifactId>joda-time</artifactId>
             <version>2.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
     </dependencies>
 
