--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,8 @@ spring.mail.properties.smtp.auth=true
 spring.mail.properties.smtp.starttls.enable=true
 spring.mail.properties.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.enable=true
+#springBootCache
+spring.cache.cache-names=myCache
+#缺省最大个数10000,缺省一天（单位：s秒、m分钟、h小时、d天）过期
+spring.cache.caffeine.spec=initialCapacity=50,maximumSize=1000,expireAfterAccess=1d
+spring.cache.type=caffeine
