--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,15 @@
             <version>1.60</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit -->
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>4.0.15-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
