--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,12 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+        </dependency>
+
 
     </dependencies>
 
